syntax = "proto3";

package com.test.rpc;

service SearchService {
  rpc search(SearchRequest) returns (SearchResultDto) {}
}

message SearchRequest {
  optional string from = 1;
  optional string to = 2;
  repeated string tags = 3;
  map<string, string> roles = 4;
  int32 resultOffset = 5;
  int32 resultLimit = 6;
}

message SearchResultDto {
  repeated ResultDto results = 1;
  int32 resultOffset = 2;
  int32 resultLimit = 3;
  int32 resultTotalCount = 4;
}

message ResultDto {
  string key = 1;
  repeated string tags = 2;
  map<string, string> roles = 3;
}
